--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.0
   font_awesome_flutter: 6.0.0
+  uuid: 1.0.0
 
 dev_dependencies:
   flutter_test:
